# SaunaClicker

./: CMakeLists.txt  README.md
SDL2/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2_ttf-config.cmake
sauna_clicker/: main.cpp  sauna.h  saunaclicker.cpp
sauna_clicker/output/: main
